<resources>
    <string name="app_name">Questify</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="my_profile">My Profile</string>
    <string name="badges_section_title">Badges</string>
    <string name="equipment_section_title">Equipment</string>
    <string name="no_badges_message">You have no badges yet. Complete quests to earn them!</string>
    <string name="no_equipment_message">You have no equipment yet.</string>
    <string name="logout">Logout</string>
    <string name="change_password_title">Change Password</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="user_profile">User Profile</string>
    <string name="xp_progress_label">XP progress bar\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="view_options">
        <item>Calendar</item>
        <item>List</item>
    </string-array>

    <string name="number_of_tasks_by_status">Number of tasks by status</string>
    <string name="statistics">Statistics</string>
    <string name="active_days_streak">Active days streak</string>
    <string name="xp_won_in_the_last_7_days">XP won in the last 7 days</string>
    <string name="completed_tasks_by_category">Completed tasks by category</string>
    <string name="completed_tasks_streak">Completed tasks streak</string>
    <string name="average_difficulty_of_completed_tasks">Average difficulty of completed tasks</string>
    <string name="my_friends">My friends</string>
    <string name="search">Search</string>
    <string name="friends_and_allies">Friends and allies</string>
    <string name="add_friend_button">Add</string>
    <string name="no_friends_message">You currently have no friends. Add friends by searching or scanning a QR code!</string>
    <string name="failed_to_load_friends">Failed to load friends.</string>
    <string name="no_users_found_matching_your_search">No users found matching your search.</string>
    <string name="search_failed">Search failed. Please try again later.</string>
    <string name="remove_friend_button">Remove</string>
    <string name="create_alliance">Create alliance</string>
    <string name="enter_alliance_name">Enter Alliance Name</string>
    <string name="alliance_name">Alliance Name</string>
</resources>