<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.activity.UserStatisticsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_statistics"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Statistics" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_tasks_by_status"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:id="@+id/donutChartContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_days_streak"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvActiveDaysStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 day"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xp_won_in_the_last_7_days"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:id="@+id/lineChartContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed_tasks_streak"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvLongestTaskStreak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 days"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed_tasks_by_category"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:id="@+id/barChartContainer"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_difficulty_of_completed_tasks"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:id="@+id/averageDifficultyChartContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Special Missions"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/tvSpecialMissionsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                tools:text="1 Started / 0 Completed"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>